DT-1911  Navigation overlay fix on iOS mobile

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -79,6 +79,9 @@ html, body {
 	height: 100vh;
 	opacity: 1;
 	width: -webkit-calc(100% - 0px);
+	@media @mobile {
+		padding-bottom: 45px;
+	}
 }
 
 // Open navigation page overlay
